--- a/Project_PBC/app1/main/templates/main/about.html
+++ b/Project_PBC/app1/main/templates/main/about.html
@@ -17,7 +17,7 @@
 {% block footer %}
     <footer class="py-4 bg-dark">
         <div class="container">
-            <p class="m-0 text-center text-white">PBC & A gift in the big city</p>
+            <p class="m-0 text-center text-white">PBC <img src="{% static "deps/logo_image/sign_3.png" %}" alt="logo"> Подарок в большом городе</p>
         </div>
     </footer>
 {% endblock  %}
