--- a/Project_PBC/app1/templates/base.html
+++ b/Project_PBC/app1/templates/base.html
@@ -14,10 +14,10 @@
     {% block css %}
     {% endblock %}
     <!-- Favicons for different platforms -->
-    <link rel="apple-touch-icon" sizes="180x180" href={% static "deps/favicon/apple-touch-icon.png" %}>
-    <link rel="icon" type="image/png" sizes="32x32" href={% static "deps/favicon/favicon-32x32.png" %}>
-    <link rel="icon" type="image/png" sizes="16x16" href={% static "deps/favicon/favicon-16x16.png" %}>
-    <link rel="manifest" href={% static "deps/favicon/site.webmanifest" %}>
+    <link rel="apple-touch-icon" sizes="180x180" href={% static "deps/logo_image/sign.png" %}>
+    <link rel="icon" type="image/png" sizes="32x32" href={% static "deps/logo_image/sign.png" %}>
+    <link rel="icon" type="image/png" sizes="16x16" href={% static "deps/logo_image/sign.png" %}>
+    <link rel="manifest" href={% static "deps/favicon/site.webmanifest" %}> 
     <!-- шрифты -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -54,7 +54,7 @@
                             <a class="nav-link  text-white" href="carts/cart.html">Корзина</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link  text-white" href="users/login.html">Войти</a>
+                            <a class="nav-link  text-white" href="{% url "user:login" %}">Войти</a>
                         </li>
                         <li class="nav-item dropdown ">
                             <a class="nav-link dropdown-toggle text-white" href="#" role="button"
@@ -63,13 +63,13 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item  text-white" href="carts/cart.html">Корзина</a></li>
-                                <li><a class="dropdown-item  text-white" href="users/profile.html">Личный кабинет</a>
+                                <li><a class="dropdown-item  text-white" href="{% url "user:profile" %}">Личный кабинет</a>
                                 </li>
                                 <li><a class="dropdown-item  text-white" href="{% url "admin:index" %}">Админ панель</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item  text-white" href="#">Выйти</a></li>
+                                <li><a class="dropdown-item  text-white" href="{% url "user:logout" %}">Выйти</a></li>
                             </ul>
                         </li>
                     </ul>
