--- a/Project_PBC/app1/main/templates/main/index.html
+++ b/Project_PBC/app1/main/templates/main/index.html
@@ -14,10 +14,10 @@
 {% block footer %}
     <footer class="py-4 bg-dark">
         <div class="container">
-            <p class="m-0 text-center text-white">PBC <img src="{% static "deps/logo_image/sign_3.png" %}" alt="logo"> Подарок в большом городе</p>
+            <p class="m-0 text-center text-white"><span style="color:hsl(304, 100%, 85%)">PBC </span><img src="{% static "deps/logo_image/sign_3.png" %}" alt="logo"><span style="color:hsl(304, 100%, 85%)"> ПОДАРОК В БОЛЬШОМ ГОРОДЕ</span></p>
         </div>
     </footer>
-{% endblock  %}
+{% endblock  %} 
 
 
 
