--- a/Project_PBC/app1/goods/templates/goods/catalog.html
+++ b/Project_PBC/app1/goods/templates/goods/catalog.html
@@ -2,6 +2,11 @@
 {% load static %}
 {% load goods_tags %}
 
+{% block modal_cart %}
+{% include "includes/cart_button.html" %}
+{% endblock modal_cart %}
+
+
 {% block content %}
     <!-- Контент на странице -->
     <div class="row"> 
@@ -81,7 +86,7 @@
                             <p><strong>{{ product.price }} руб</strong></p>
                         {% endif %}
 
-                        <a href="#" class="btn add-to-cart">
+                        <a href="{% url "cart:cart_add" product.slug %}" class="btn add-to-cart">
                             <img class="mx-1" src={% static "deps/icons/cart-plus.svg" %} alt="Catalog Icon" width="32" height="32">
                         </a>
                     </div>
@@ -89,7 +94,7 @@
             </div>
         </div>    
     {% endfor %}           
-    </div>
+    </div> 
     
     <!-- Пагинация -->
     <nav aria-label="Page navigation example">
