--- a/Project_PBC/app1/main/templates/main/aboutas.html
+++ b/Project_PBC/app1/main/templates/main/aboutas.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href={% static "deps/css/my_footer_css.css" %}>
 {% endblock css %}
 
+{% block modal_cart %}
+{% include "includes/cart_button.html" %}
+{% endblock modal_cart %}
 
 {% block content %}
     <div class="mt-51 pt-51 bg-white custom-shadow rounded">
