--- a/Project_PBC/app1/users/templates/users/login.html
+++ b/Project_PBC/app1/users/templates/users/login.html
@@ -2,6 +2,9 @@
 
 {% load static %}
 
+{% block modal_cart %}
+{% include "includes/cart_button.html" %}
+{% endblock modal_cart %}
 
 {% block content %}
                     <div class="row">
